<resources>
    <!--Activity Info-->
    <string name="app_name">Water Insights</string>
    <string name="title_activity_collect_data">CollectDataActivity</string>

    <!--Start Screen -->
    <string name="start_screen_title">WaterInsights</string>
    <string name="start_screen_scistarter_sign_in">SciStarter Sign in or Sign up</string>
    <string name="start_screen_guest_sign_in">Continue as a guest</string>
    <string name="start_screen_about_text">Welcome! Thanks for helping us build a World Water Health Map.</string>
    <string name="learn_more_link">Learn more</string>
    <string name="play_services_fatal_error_msg">We\'re sorry, WaterInsights does not support your device.</string>
    <string name="logout_scistarter_string">Logout of SciStarter</string>
    <string name="logout_scistarter_message_string">Logged out of SciStarter</string>

    <!-- Scistarter Login Activity -->
    <string name="scistarter_login_description">By signing in, you can keep track of the water you\'ve tested on your SciStarter Dashboard.</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in to SciStarter</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="error_field_required">An email is required</string>
    <string name="scistarter_register_link">Don\'t have a SciStarter account? <font color='#2752a6'>Click here</font> to register for one now.</string>
    <string name="email_not_found">Email not registered with SciStarter</string>
    <string name="successful_login">Successfully logged in!</string>
    <string name="loging_in_progress">Signing you in</string>
    <string name="scistart_register_url">https://scistarter.org/login</string>

    <!--Overview Screen-->
    <string name="get_started_title">Here\'s a summary of what you\'ll be doing</string>
    <string name="overview_card_1_paragraph">Things you\'ll need:&lt;br /&gt;
        &#8226; Test strip (don\'t open it until it\'s time to do the test)&lt;br /&gt;
        &#8226; Black color card&lt;br /&gt;
        &#8226; White color chart&lt;br /&gt;
        &#8226; Recent (less than an hour old) water sample
    </string>
    <string name="overview_card_1_paragraph_1"><b>Things you\'ll need:</b>
    </string>
    <string name="overview_card_1_paragraph_2">&#8226; Test strip</string>
    <string name="overview_card_1_paragraph_21">- don\'t open it until it\'s time to do the test</string>
    <string name="overview_card_1_paragraph_3">&#8226; Black color card</string>
    <string name="overview_card_1_paragraph_4">&#8226; White color chart</string>
    <string name="overview_card_1_paragraph_5">&#8226; Recent water sample</string>
    <string name="overview_card_1_paragraph_51">- less than an hour old</string>


    <string name="overview_card_2_paragraph">
        Gather a water sample in a container you\'d be comfortable drinking from.
        To test your water sample, you\'ll need to submerge an entire test strip in the water for about 1 second.
        Take it out, start the timer in the app, and place the strip on the test card.
        Make sure it is oriented as shown on the test card.
        Try to place the test strip as straight as possible in the space indicated on the card.
    </string>
    <string name="overview_card_3_paragraph">
        When the timer ends, the app will enable you to take a picture of the strip and card.
        We\'ll analyze that image and tell you about your water quality.
        We\'ll also upload the data to a cloud server where we can study trends in water bodies worldwide!
        You will be contributing to a World Water Health Map!
    </string>
    <string name="overview_get_started_button">Get Started</string>

    <!--Inititial Information Sreen-->
    <string name="initial_information_overview_string">Let\'s get some info about the water you\'re testing.</string>
    <string name="testing_location_string">Where was this water collected?</string>
    <string name="testing_location_hint">(Your home, the name of a lake, etc.)</string>
    <string name="type_of_water_string">What type of water are you testing?</string>
    <string name="other_observations_string">Any other observations?</string>
    <string name="other_observations_hint">Tell us anything else you think would be helpful (optional).</string>
    <string name="continue_string">Continue</string>
    <string name="please_select_type_string">Please select a water body type.</string>
    <string name="instruction_title">Instructions:</string>
    <string name="location_error_string">We could not find your current location.</string>
    <string name="location_input_hint">Enter address, place, or Zip code</string>
    <string name="my_location_string">My location</string>
    <string name="current_location_string">Current Location</string>

    <!--Data collection Screen-->
    <string name="finished_string">Finished</string>
    <string name="current_strip_string">Test Card Reference:</string>
    <string name="start_timer_string">Start Timer</string>
    <string name="take_picture_string">Take Picture</string>
    <string name="upload_picture_string">Choose from Gallery</string>
    <string name="take_picture_instructions">Tap the <b><i>Take Picture</i></b> button below to bring up the camera and take a photo.
        Tap the <b><i>Choose from Gallery</i></b> button below to select a photo from the collection on your phone.
        When you have taken or selected a photo, we will analyze it and tell you the results.
    </string>
    <string name="picture_loading_string">Analyzing Image</string>
    <string name="reset_timer_string">Reset Timer</string>
    <string name="whoops_string">Whoops&#8230;</string>
    <string name="analysis_error_string">There was a problem analyzing the test strip. Make sure everything is correctly lined up and try again.</string>
    <string name="take_a_picture_string">Take a picture</string>
    <string name="step1_instructions">
        Carefully, open a test strip and submerge the whole thing in the water for about 1 second.
        Take it out and start the timer.
        Prepare to take a photo when the timer is done by placing the strip on the card, carefully aligning the strip so it is turned the right way and lined up straight.
    </string>
    <string name="results_string">Sample Analysis</string>
    <string name="analysis_failure_message">We can\'t analyze the test strip right now, but you can still input results manually using the included color card.</string>
    <string name="results_paragraph">
        Here\'s a little about what we see.
        Thanks for helping us Beta Test this app! During this beta period, you should not be alarmed by our results, especially if they don\'t match the data you entered.
        If there\'s an indication that your water is problematic, you should get it analyzed by a professional. You could be seeing results from a damaged test strip or a bug in our app.
        The Scientific Method teaches we should be able to reproduce our results before we consider them valid.
    </string>

    <!--Manual Entry Activity-->
    <string name="manual_entry_activity_title">Enter values manually</string>
    <string name="manual_entry_instructions">Now, compare the test strip colors to the color chart. Enter what you think the test results are:</string>
    <string name="alkalinity_value_string">Alkalinity Value:</string>
    <string name="ph_value_string">pH Value:</string>
    <string name="total_chlorine_value">Chlorine Value:</string>
    <string name="total_hardness_value">Hardness Value:</string>
    <string name="nitrate_value">Nitrate Value:</string>
    <string name="nitrite_value">Nitrite Value:</string>

    <!--Results Activity-->
    <string name="test_again_string">Test Another Strip</string>
    <string name="error_value">N/A</string>

    <!--Parameters-->
    <string name="alkalinity_string">Total Alkalinity</string>
    <string name="ph_string">pH:</string>
    <string name="total_chlorine_string">Total Chlorine:</string>
    <string name="nitrite_string">Nitrite:</string>
    <string name="nitrate_string">Nitrate:</string>
    <string name="hardness_string">Total Hardness:</string>

    <!--Parameter Descriptions-->
    <string name="alkalinity_description">Usually similar to Total Hardness unless you have a water softener. Low levels can cause corrosion.</string>
    <string name="hardness_description">Hardness doesn\'t impact safety but can increase scale build-up. And hard water doesn\'t taste great.</string>
    <string name="ph_description">High pH can decrease the effectiveness of chlorine. Low pH can corrode pipes, leaching lead and copper into the water.</string>
    <string name="total_chlorine_description">Used as a disinfectant, low values can increase potential for disease to spread. </string>
    <string name="nitrite_description">A form of Nitrate but a value greater than 1 ppm can have similar health risks as high values of Nitrate.</string>
    <string name="nitrate_description">A value greater than 10 ppm can indicate your water is contaminated by fertilizer or sewage and may pose a health risk.</string>
    <string name="title_activity_scistarter_login">Scistarter Sign in</string>

    <!--Activity Labels for SEO indexing and stuff-->
    <string name="title_main_activity">Home Screen</string>
    <string name="title_overview_activity">Instructions</string>
    <string name="title_initial_information_activity">Initial Information</string>
    <string name="title_take_picture_activity">Take Test Strip Picture</string>
    <string name="title_results_activity">Test Results</string>

    <!--API Keys-->
    <string name="google_maps_API_key">AIzaSyAohpbCQShJ7YWO18wSnY-3HYsLpaiHymk</string>

    <!--Spinner Arrays-->

    <!--Water Types-->
    <string-array name="water_type_spinner">
        <item>Tap Water</item>
        <item>Lake</item>
        <item>Pond</item>
        <item>Stream</item>
        <item>Well</item>
        <item>River</item>
        <item>Select one</item>
    </string-array>

    <!--Manual Entry Items-->
    <string-array name="nitrate_spinner_values">
        <item>0 PPM</item>
        <item>20 PPM</item>
        <item>40 PPM</item>
        <item>80 PPM</item>
        <item>160 PPM</item>
        <item>200 PPM</item>
    </string-array>

    <string-array name="nitrite_spinner_values">
        <item>0 PPM</item>
        <item>0.5 PPM</item>
        <item>1.0 PPM</item>
        <item>3.0 PPM</item>
        <item>5.0 PPM</item>
        <item>10.0 PPM</item>
    </string-array>

    <string-array name="total_hardness_spinner_values">
        <item>0 PPM</item>
        <item>25 PPM</item>
        <item>75 PPM</item>
        <item>150 PPM</item>
        <item>300 PPM</item>
    </string-array>

    <string-array name="total_chlorine_spinner_values">
        <item>0 PPM</item>
        <item>0.5 PPM</item>
        <item>1.0 PPM</item>
        <item>2.0 PPM</item>
        <item>4.0 PPM</item>
        <item>6.0 PPM</item>
    </string-array>

    <string-array name="total_alkalinity_spinner_values">
        <item>0 PPM</item>
        <item>40 PPM</item>
        <item>80 PPM</item>
        <item>120 PPM</item>
        <item>180 PPM</item>
        <item>300 PPM</item>
    </string-array>

    <string-array name="ph_spinner_values">
        <item>6.2</item>
        <item>6.8</item>
        <item>7.2</item>
        <item>7.8</item>
        <item>8.4</item>
    </string-array>

</resources>
