<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhiteTitle"
    tools:context=".MainActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/title_text_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/start_screen_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="26sp"
        app:fontFamily="@font/open_sans_semibold"
        app:layout_constraintBottom_toTopOf="@+id/logo_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/logo_image"
        android:layout_width="268dp"
        android:layout_height="240dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_box"
        app:srcCompat="@drawable/logo_round" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/about_text_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/start_screen_about_text"
        android:textSize="22sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintBottom_toTopOf="@+id/scistarter_sign_in_button"
        app:layout_constraintEnd_toEndOf="@id/logo_image"
        app:layout_constraintStart_toStartOf="@id/logo_image"
        app:layout_constraintTop_toBottomOf="@+id/logo_image" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/scistarter_sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/scistarter_button_border"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/start_screen_scistarter_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/offWhiteTitle"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guest_button"
        app:layout_constraintEnd_toEndOf="@id/logo_image"
        app:layout_constraintStart_toStartOf="@id/logo_image" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/guest_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/guest_button_border"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/start_screen_guest_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/learn_more_link"
        app:layout_constraintEnd_toEndOf="@id/logo_image"
        app:layout_constraintStart_toStartOf="@id/logo_image" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/learn_more_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/learn_more_link"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:fontFamily="@font/roboto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>