<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhiteTitle"
    tools:context=".InitialInformationActivity">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/initial_information_overview_text"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/initial_information_overview_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="20dp"
        android:textSize="22sp"
        android:textColor="@color/offWhiteTitle"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:text="@string/initial_information_overview_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/testing_location_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/testing_location_string"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintStart_toStartOf="@id/initial_information_overview_text"
        app:layout_constraintTop_toBottomOf="@id/initial_information_overview_text" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/testing_location_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/testing_location_hint"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        android:textColor="@color/textBoxLightGrey"
        app:layout_constraintStart_toStartOf="@id/testing_location_title_text"
        app:layout_constraintTop_toBottomOf="@id/testing_location_title_text"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/water_type_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/type_of_water_string"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintStart_toStartOf="@id/initial_information_overview_text"
        app:layout_constraintTop_toBottomOf="@id/testing_location_edit_text" />

    <Spinner
        android:id="@+id/water_type_spinner"
        android:layout_width="140dp"
        android:layout_height="?attr/dropdownListPreferredItemHeight"
        android:background="@drawable/spinner_water_type_background"
        style="@style/Widget.AppCompat.Spinner"
        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
        android:paddingRight="14dp"
        android:popupBackground="@color/offWhiteTitle"
        android:popupElevation="3dp"
        android:stateListAnimator="@drawable/spinner_water_type_sla"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/water_type_title_text"
        app:layout_constraintTop_toBottomOf="@id/water_type_title_text" />


</android.support.constraint.ConstraintLayout>